<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.innominds.rsfb.FunctionalArea">

    <android.support.v7.widget.CardView
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:id="@+id/card_textView"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardBackgroundColor="@android:color/white"
        android:layout_width="match_parent">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_info"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true" />
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/spinner_businesscard"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/card_textView"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardBackgroundColor="@color/background_color"
        android:layout_width="match_parent">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_funArea"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/businesscard"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/spinner_businesscard"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        card_view:cardBackgroundColor="@color/background_color"
        android:layout_width="match_parent">
        <Spinner
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_businessCode"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/businesscard"
        android:layout_marginTop="60dp"
        android:weightSum="2">
        <Button
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_reset"
            android:id="@+id/btn_reset"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"/>

        <Button
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_submit"
            android:id="@+id/btn_submit"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"/>

    </LinearLayout>

</RelativeLayout>
